Add operators topic

--- a/lesson_walkthrough.ipynb
+++ b/lesson_walkthrough.ipynb
@@ -1242,6 +1242,419 @@
    "source": [
     "db.materials.find({\"elements\": [\"O\"], \"nelements\": 2}).count()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Specify Conditions with Operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'material_id': 'mp-12671', 'nelements': 3, 'pretty_formula': 'Er2SO2'}\n",
+      "{'material_id': 'mp-5152', 'nelements': 3, 'pretty_formula': 'La2SiO5'}\n",
+      "{'material_id': 'mp-552787', 'nelements': 3, 'pretty_formula': 'FeClO'}\n",
+      "{'material_id': 'mp-780541', 'nelements': 3, 'pretty_formula': 'Fe4O7F'}\n",
+      "{'material_id': 'mp-31899', 'nelements': 4, 'pretty_formula': 'Ba2MnReO6'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "COMMON_PROJ = {\n",
+    "    \"material_id\": 1,\n",
+    "    \"pretty_formula\": 1,\n",
+    "    \"_id\": 0,\n",
+    "}\n",
+    "\n",
+    "def print_a_few_for(query):\n",
+    "    proj = {k: 1 for k in query}\n",
+    "    proj.update(COMMON_PROJ)\n",
+    "    for doc in db.materials.find(query, proj).limit(5):\n",
+    "        pprint(doc)\n",
+    "\n",
+    "query = {\"nelements\": {\"$gte\": 3}}\n",
+    "print_a_few_for(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'material_id': 'mp-568345', 'nelements': 1, 'pretty_formula': 'Fe'}\n",
+      "{'material_id': 'mp-1703', 'nelements': 2, 'pretty_formula': 'YbZn'}\n",
+      "{'material_id': 'mp-569624', 'nelements': 2, 'pretty_formula': 'HfCr2'}\n",
+      "{'material_id': 'mp-12660', 'nelements': 2, 'pretty_formula': 'LuB6'}\n",
+      "{'material_id': 'mp-188', 'nelements': 2, 'pretty_formula': 'AlPt3'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_a_few_for({\"nelements\": {\"$lt\": 3}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.materials.find({\"chemsys\": \"Fe-O\", \"spacegroup.crystal_system\": \"cubic\"}).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27370"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.materials.find({\n",
+    "    \"$or\": [{\"nelements\": 2}, {\"nelements\": 4}]\n",
+    "}).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'elasticity': None, 'material_id': 'mp-568345', 'pretty_formula': 'Fe'}\n",
+      "{'elasticity': None, 'material_id': 'mp-12671', 'pretty_formula': 'Er2SO2'}\n",
+      "{'elasticity': None, 'material_id': 'mp-1703', 'pretty_formula': 'YbZn'}\n",
+      "{'elasticity': None, 'material_id': 'mp-5152', 'pretty_formula': 'La2SiO5'}\n",
+      "{'elasticity': {'G_Reuss': 64.86603926197118,\n",
+      "                'G_VRH': 66.1852057595004,\n",
+      "                'G_Voigt': 67.50437225702963,\n",
+      "                'K_Reuss': 189.54199905990907,\n",
+      "                'K_VRH': 189.5741939942109,\n",
+      "                'K_Voigt': 189.60638892851273,\n",
+      "                'calculations': {'energy_cutoff': 700.0,\n",
+      "                                 'kpoint_density': 7000,\n",
+      "                                 'pseudopotentials': ['Hf_pv', 'Cr_pv']},\n",
+      "                'elastic_anisotropy': 0.2037075326032598,\n",
+      "                'elastic_tensor': [[295.8188907773902,\n",
+      "                                    133.82065045871653,\n",
+      "                                    140.1170929005653,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    -0.036991826666666644],\n",
+      "                                   [133.82065045871653,\n",
+      "                                    299.3255081549423,\n",
+      "                                    141.6470726644416,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    -0.05824203666666673],\n",
+      "                                   [140.1170929005653,\n",
+      "                                    141.6470726644416,\n",
+      "                                    280.1434693768354,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    -0.0630635066666666],\n",
+      "                                   [0.0, 0.0, 0.0, 52.12082853999999, 0.0, 0.0],\n",
+      "                                   [0.0, 0.0, 0.0, 0.0, 52.19335160333334, 0.0],\n",
+      "                                   [-0.036991826666666644,\n",
+      "                                    -0.05824203666666673,\n",
+      "                                    -0.0630635066666666,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    79.97333038000001]],\n",
+      "                'poisson_ratio': 0.34363428744148256},\n",
+      " 'material_id': 'mp-569624',\n",
+      " 'pretty_formula': 'HfCr2'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_a_few_for({\"elasticity\": {\"$exists\": True}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'elasticity': {'G_Reuss': 64.86603926197118,\n",
+      "                'G_VRH': 66.1852057595004,\n",
+      "                'G_Voigt': 67.50437225702963,\n",
+      "                'K_Reuss': 189.54199905990907,\n",
+      "                'K_VRH': 189.5741939942109,\n",
+      "                'K_Voigt': 189.60638892851273,\n",
+      "                'calculations': {'energy_cutoff': 700.0,\n",
+      "                                 'kpoint_density': 7000,\n",
+      "                                 'pseudopotentials': ['Hf_pv', 'Cr_pv']},\n",
+      "                'elastic_anisotropy': 0.2037075326032598,\n",
+      "                'elastic_tensor': [[295.8188907773902,\n",
+      "                                    133.82065045871653,\n",
+      "                                    140.1170929005653,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    -0.036991826666666644],\n",
+      "                                   [133.82065045871653,\n",
+      "                                    299.3255081549423,\n",
+      "                                    141.6470726644416,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    -0.05824203666666673],\n",
+      "                                   [140.1170929005653,\n",
+      "                                    141.6470726644416,\n",
+      "                                    280.1434693768354,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    -0.0630635066666666],\n",
+      "                                   [0.0, 0.0, 0.0, 52.12082853999999, 0.0, 0.0],\n",
+      "                                   [0.0, 0.0, 0.0, 0.0, 52.19335160333334, 0.0],\n",
+      "                                   [-0.036991826666666644,\n",
+      "                                    -0.05824203666666673,\n",
+      "                                    -0.0630635066666666,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    79.97333038000001]],\n",
+      "                'poisson_ratio': 0.34363428744148256},\n",
+      " 'material_id': 'mp-569624',\n",
+      " 'pretty_formula': 'HfCr2'}\n",
+      "{'elasticity': {'G_Reuss': 4.800058831100799,\n",
+      "                'G_VRH': 15.695815587428928,\n",
+      "                'G_Voigt': 26.591572343757058,\n",
+      "                'K_Reuss': 12.632559688113227,\n",
+      "                'K_VRH': 27.637901832532986,\n",
+      "                'K_Voigt': 42.643243976952746,\n",
+      "                'calculations': {'energy_cutoff': 700.0,\n",
+      "                                 'kpoint_density': 7000,\n",
+      "                                 'pseudopotentials': ['Fe_pv', 'Cl', 'O']},\n",
+      "                'elastic_anisotropy': 25.074876418379876,\n",
+      "                'elastic_tensor': [[132.83779269421643,\n",
+      "                                    4.717792594504168,\n",
+      "                                    41.313046328714506,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [4.717792594504168,\n",
+      "                                    13.477772725303467,\n",
+      "                                    4.593045165520949,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [41.313046328714506,\n",
+      "                                    4.593045165520949,\n",
+      "                                    136.22586219557556,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [0.0, 0.0, 0.0, 1.98697116, 0.0, 0.0],\n",
+      "                                   [0.0, 0.0, 0.0, 0.0, 51.08350865666667, 0.0],\n",
+      "                                   [0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    2.581534060000001]],\n",
+      "                'poisson_ratio': 0.26124289904174286},\n",
+      " 'material_id': 'mp-552787',\n",
+      " 'pretty_formula': 'FeClO'}\n",
+      "{'elasticity': {'G_Reuss': 89.22439690238315,\n",
+      "                'G_VRH': 91.1977479844793,\n",
+      "                'G_Voigt': 93.17109906657547,\n",
+      "                'K_Reuss': 225.23046094201425,\n",
+      "                'K_VRH': 225.23046094240684,\n",
+      "                'K_Voigt': 225.23046094279943,\n",
+      "                'calculations': {'energy_cutoff': 700.0,\n",
+      "                                 'kpoint_density': 7000,\n",
+      "                                 'pseudopotentials': ['Al', 'Pt']},\n",
+      "                'elastic_anisotropy': 0.2211672088169152,\n",
+      "                'elastic_tensor': [[319.43298108763224,\n",
+      "                                    178.12963573334946,\n",
+      "                                    178.129548438403,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [178.12963573334946,\n",
+      "                                    319.43208297658407,\n",
+      "                                    178.129473057102,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [178.129548438403,\n",
+      "                                    178.129473057102,\n",
+      "                                    319.43176996326986,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    108.18424078333338,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    108.18423757000005,\n",
+      "                                    0.0],\n",
+      "                                   [0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    108.18429138000002]],\n",
+      "                'poisson_ratio': 0.32162138374300725},\n",
+      " 'material_id': 'mp-188',\n",
+      " 'pretty_formula': 'AlPt3'}\n",
+      "{'elasticity': {'G_Reuss': 36.0849960555562,\n",
+      "                'G_VRH': 36.138594567747134,\n",
+      "                'G_Voigt': 36.192193079938065,\n",
+      "                'K_Reuss': 102.02676355863561,\n",
+      "                'K_VRH': 102.04618920065883,\n",
+      "                'K_Voigt': 102.06561484268204,\n",
+      "                'calculations': {'energy_cutoff': 700.0,\n",
+      "                                 'kpoint_density': 7000,\n",
+      "                                 'pseudopotentials': ['Cd', 'O']},\n",
+      "                'elastic_anisotropy': 0.015234201718120843,\n",
+      "                'elastic_tensor': [[149.72856490003238,\n",
+      "                                    76.18447389649583,\n",
+      "                                    76.0971442247916,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [76.18447389649583,\n",
+      "                                    155.32679754703915,\n",
+      "                                    76.82214981963244,\n",
+      "                                    0.0,\n",
+      "                                    0.16773408205128196,\n",
+      "                                    0.0],\n",
+      "                                   [76.0971442247916,\n",
+      "                                    76.82214981963244,\n",
+      "                                    155.32763525522702,\n",
+      "                                    0.0,\n",
+      "                                    0.11635495448717942,\n",
+      "                                    0.0],\n",
+      "                                   [0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    34.600412473333336,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [0.0,\n",
+      "                                    0.16773408205128196,\n",
+      "                                    0.11635495448717942,\n",
+      "                                    0.0,\n",
+      "                                    34.666930369230755,\n",
+      "                                    0.0],\n",
+      "                                   [0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    34.600545970000006]],\n",
+      "                'poisson_ratio': 0.3416257412326539},\n",
+      " 'material_id': 'mp-2310',\n",
+      " 'pretty_formula': 'CdO2'}\n",
+      "{'elasticity': {'G_Reuss': 140.01490613546238,\n",
+      "                'G_VRH': 142.6665329138408,\n",
+      "                'G_Voigt': 145.31815969221918,\n",
+      "                'K_Reuss': 136.562024021793,\n",
+      "                'K_VRH': 136.97260811326998,\n",
+      "                'K_Voigt': 137.38319220474696,\n",
+      "                'calculations': {'energy_cutoff': 700.0,\n",
+      "                                 'kpoint_density': 7000,\n",
+      "                                 'pseudopotentials': ['Ta_pv', 'Be_sv']},\n",
+      "                'elastic_anisotropy': 0.19539490063027198,\n",
+      "                'elastic_tensor': [[376.54891743906546,\n",
+      "                                    -7.386712349243056,\n",
+      "                                    59.36280676664959,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [-7.386712349243056,\n",
+      "                                    376.54900803035565,\n",
+      "                                    59.36166355240516,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [59.36280676664959,\n",
+      "                                    59.36166355240516,\n",
+      "                                    260.67528843367813,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0],\n",
+      "                                   [0.0, 0.0, 0.0, 149.2932377633333, 0.0, 0.0],\n",
+      "                                   [0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    149.29423271666673,\n",
+      "                                    0.0],\n",
+      "                                   [0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    0.0,\n",
+      "                                    127.19150933666668]],\n",
+      "                'poisson_ratio': 0.11342874565238646},\n",
+      " 'material_id': 'mp-567842',\n",
+      " 'pretty_formula': 'TaBe12'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_a_few_for({\"elasticity\": {\"$ne\": None}})"
+   ]
   }
  ],
  "metadata": {
