Add sorting topic

--- a/lesson_walkthrough.ipynb
+++ b/lesson_walkthrough.ipynb
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from mongomock import MongoClient\n",
-    "#from pymongo import MongoClient\n",
+    "from pymongo import MongoClient\n",
     "\n",
     "client = MongoClient()"
    ]
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Database(mongomock.MongoClient('localhost', 27017), 'swc')\n"
+      "Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'swc')\n"
      ]
     }
    ],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collection(Database(mongomock.MongoClient('localhost', 27017), 'swc'), 'materials')\n"
+      "Collection(Database(MongoClient(host=['localhost:27017'], document_class=dict, tz_aware=False, connect=True), 'swc'), 'materials')\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -208,12 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "db.materials.drop()\n",
     "with open('data/mongo-novice-materials.json') as f:\n",
     "    db.materials.insert_many(json.load(f))"
    ]
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +239,7 @@
        "66140"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1654,6 +1655,328 @@
    ],
    "source": [
     "print_a_few_for({\"elasticity\": {\"$ne\": None}})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pymongo\n",
+    "cursor = db.materials.find().sort([\n",
+    "    (\"borough\", pymongo.ASCENDING),\n",
+    "    (\"address.zipcode\", pymongo.DESCENDING)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "COMMON_PROJ = {\n",
+    "    \"material_id\": 1,\n",
+    "    \"pretty_formula\": 1,\n",
+    "    \"spacegroup.number\": 1,\n",
+    "    \"_id\": 0,\n",
+    "}\n",
+    "\n",
+    "def cursor_with_minimal_projection(query):\n",
+    "    proj = {k: 1 for k in query}\n",
+    "    proj.update(COMMON_PROJ)\n",
+    "    cursor = db.materials.find(query, proj)\n",
+    "    return cursor\n",
+    "\n",
+    "def print_a_few_for(query):\n",
+    "    cursor = cursor_with_minimal_projection(query)\n",
+    "    for doc in cursor.limit(5):\n",
+    "        pprint(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'elasticity': {'poisson_ratio': -0.07595596751510682},\n",
+      " 'material_id': 'mp-771798',\n",
+      " 'pretty_formula': 'WO3',\n",
+      " 'spacegroup': {'number': 204}}\n",
+      "{'elasticity': {'poisson_ratio': 0.042582069532848744},\n",
+      " 'material_id': 'mp-87',\n",
+      " 'pretty_formula': 'Be',\n",
+      " 'spacegroup': {'number': 194}}\n",
+      "{'elasticity': {'poisson_ratio': 0.05989488523534276},\n",
+      " 'material_id': 'mp-765892',\n",
+      " 'pretty_formula': 'MnCoO4',\n",
+      " 'spacegroup': {'number': 10}}\n",
+      "{'elasticity': {'poisson_ratio': 0.07135395365323711},\n",
+      " 'material_id': 'mp-611426',\n",
+      " 'pretty_formula': 'C',\n",
+      " 'spacegroup': {'number': 194}}\n",
+      "{'elasticity': {'poisson_ratio': 0.07391837849830045},\n",
+      " 'material_id': 'mp-23703',\n",
+      " 'pretty_formula': 'LiH',\n",
+      " 'spacegroup': {'number': 225}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "filt = {\"elasticity\": {\"$ne\": None}}\n",
+    "proj = {\"elasticity.poisson_ratio\": 1}\n",
+    "proj.update(COMMON_PROJ)\n",
+    "cursor = db.materials.find(filt, proj).sort(\"elasticity.poisson_ratio\")\n",
+    "for doc in cursor.limit(5):\n",
+    "    pprint(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'elasticity': {'poisson_ratio': 0.46752282089107655},\n",
+      " 'material_id': 'mp-1387',\n",
+      " 'pretty_formula': 'AlV3',\n",
+      " 'spacegroup': {'number': 223}}\n",
+      "{'elasticity': {'poisson_ratio': 0.46347893160099135},\n",
+      " 'material_id': 'mp-361',\n",
+      " 'pretty_formula': 'Cu2O',\n",
+      " 'spacegroup': {'number': 224}}\n",
+      "{'elasticity': {'poisson_ratio': 0.4622062265482987},\n",
+      " 'material_id': 'mp-544',\n",
+      " 'pretty_formula': 'Ti3Ir',\n",
+      " 'spacegroup': {'number': 223}}\n",
+      "{'elasticity': {'poisson_ratio': 0.4461861025154294},\n",
+      " 'material_id': 'mp-22060',\n",
+      " 'pretty_formula': 'Nb3In',\n",
+      " 'spacegroup': {'number': 223}}\n",
+      "{'elasticity': {'poisson_ratio': 0.4450687838211702},\n",
+      " 'material_id': 'mp-75',\n",
+      " 'pretty_formula': 'Nb',\n",
+      " 'spacegroup': {'number': 229}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor = db.materials.find(filt, proj).sort(\"elasticity.poisson_ratio\", -1)\n",
+    "for doc in cursor.limit(5):\n",
+    "    pprint(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'elasticity': {'poisson_ratio': 0.3419981312210572},\n",
+      " 'material_id': 'mp-556194',\n",
+      " 'pretty_formula': 'SrSbSe2F',\n",
+      " 'spacegroup': {'number': 129}}\n",
+      "{'elasticity': {'poisson_ratio': 0.34027796672596883},\n",
+      " 'material_id': 'mp-12532',\n",
+      " 'pretty_formula': 'KAg2PS4',\n",
+      " 'spacegroup': {'number': 121}}\n",
+      "{'elasticity': {'poisson_ratio': 0.3349886462699885},\n",
+      " 'material_id': 'mp-557862',\n",
+      " 'pretty_formula': 'BaAg2(HgO2)2',\n",
+      " 'spacegroup': {'number': 125}}\n",
+      "{'elasticity': {'poisson_ratio': 0.3050725032443602},\n",
+      " 'material_id': 'mp-11806',\n",
+      " 'pretty_formula': 'LiMgSnPt',\n",
+      " 'spacegroup': {'number': 216}}\n",
+      "{'elasticity': {'poisson_ratio': 0.3042911533524732},\n",
+      " 'material_id': 'mp-546011',\n",
+      " 'pretty_formula': 'YZnAsO',\n",
+      " 'spacegroup': {'number': 129}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor = db.materials.find(filt, proj).sort([\n",
+    "        (\"nelements\", -1),\n",
+    "        (\"elasticity.poisson_ratio\", -1),\n",
+    "    ])\n",
+    "for doc in cursor.limit(5):\n",
+    "    pprint(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'elasticity': {'K_VRH': 435.66148729813784},\n",
+      " 'material_id': 'mp-611426',\n",
+      " 'nelements': 1,\n",
+      " 'pretty_formula': 'C',\n",
+      " 'spacegroup': {'crystal_system': 'hexagonal'}}\n",
+      "{'elasticity': {'K_VRH': 401.3286154019227},\n",
+      " 'material_id': 'mp-49',\n",
+      " 'nelements': 1,\n",
+      " 'pretty_formula': 'Os',\n",
+      " 'spacegroup': {'crystal_system': 'hexagonal'}}\n",
+      "{'elasticity': {'K_VRH': 365.08592365295135},\n",
+      " 'material_id': 'mp-8',\n",
+      " 'nelements': 1,\n",
+      " 'pretty_formula': 'Re',\n",
+      " 'spacegroup': {'crystal_system': 'hexagonal'}}\n",
+      "{'elasticity': {'K_VRH': 346.3227612888041},\n",
+      " 'material_id': 'mp-101',\n",
+      " 'nelements': 1,\n",
+      " 'pretty_formula': 'Ir',\n",
+      " 'spacegroup': {'crystal_system': 'cubic'}}\n",
+      "{'elasticity': {'K_VRH': 307.5241654938898},\n",
+      " 'material_id': 'mp-33',\n",
+      " 'nelements': 1,\n",
+      " 'pretty_formula': 'Ru',\n",
+      " 'spacegroup': {'crystal_system': 'hexagonal'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor = db.materials.find({\n",
+    "        \"nelements\": {\"$lt\": 3}\n",
+    "    }, {\n",
+    "        \"_id\": 0,\n",
+    "        \"nelements\": 1,\n",
+    "        \"elasticity.K_VRH\": 1,\n",
+    "        \"pretty_formula\": 1,\n",
+    "        \"spacegroup.crystal_system\": 1,\n",
+    "        \"material_id\": 1,\n",
+    "    })\n",
+    "\n",
+    "cursor = cursor.sort([(\"nelements\", 1),(\"elasticity.K_VRH\", -1)])\n",
+    "\n",
+    "for doc in cursor.limit(5):\n",
+    "    pprint(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'elasticity': {'K_VRH': 435.66148729813784},\n",
+      " 'material_id': 'mp-611426',\n",
+      " 'nelements': 1,\n",
+      " 'pretty_formula': 'C',\n",
+      " 'spacegroup': {'crystal_system': 'hexagonal'}}\n",
+      "{'elasticity': {'K_VRH': 401.3286154019227},\n",
+      " 'material_id': 'mp-49',\n",
+      " 'nelements': 1,\n",
+      " 'pretty_formula': 'Os',\n",
+      " 'spacegroup': {'crystal_system': 'hexagonal'}}\n",
+      "{'elasticity': {'K_VRH': 365.08592365295135},\n",
+      " 'material_id': 'mp-8',\n",
+      " 'nelements': 1,\n",
+      " 'pretty_formula': 'Re',\n",
+      " 'spacegroup': {'crystal_system': 'hexagonal'}}\n",
+      "{'elasticity': {'K_VRH': 346.3227612888041},\n",
+      " 'material_id': 'mp-101',\n",
+      " 'nelements': 1,\n",
+      " 'pretty_formula': 'Ir',\n",
+      " 'spacegroup': {'crystal_system': 'cubic'}}\n",
+      "{'elasticity': {'K_VRH': 307.5241654938898},\n",
+      " 'material_id': 'mp-33',\n",
+      " 'nelements': 1,\n",
+      " 'pretty_formula': 'Ru',\n",
+      " 'spacegroup': {'crystal_system': 'hexagonal'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor = db.materials.find({\n",
+    "        \"nelements\": {\"$lt\": 3}\n",
+    "    }, {\n",
+    "        \"_id\": 0,\n",
+    "        \"nelements\": 1,\n",
+    "        \"elasticity.K_VRH\": 1,\n",
+    "        \"pretty_formula\": 1,\n",
+    "        \"spacegroup.crystal_system\": 1,\n",
+    "        \"material_id\": 1,\n",
+    "    }, sort=[\n",
+    "        (\"nelements\", 1),\n",
+    "        (\"elasticity.K_VRH\", -1)\n",
+    "    ])\n",
+    "\n",
+    "for doc in cursor.limit(5):\n",
+    "    pprint(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cubic 195 230\n",
+      "trigonal 143 167\n",
+      "monoclinic 3 15\n",
+      "hexagonal 169 194\n",
+      "orthorhombic 16 74\n",
+      "tetragonal 75 142\n",
+      "triclinic 1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "systems = filter(None, db.materials.distinct(\"spacegroup.crystal_system\"))\n",
+    "for s in systems:\n",
+    "    materials = list(db.materials.find(\n",
+    "        {\"spacegroup.crystal_system\": s}, {\"spacegroup.number\": 1}\n",
+    "    ).sort(\"spacegroup.number\"))\n",
+    "    print(s, materials[0][\"spacegroup\"][\"number\"], materials[-1][\"spacegroup\"][\"number\"])\n",
+    "    "
    ]
   }
  ],
